name:                haxl-test
version:             0.1.0.0
license:             BSD3
author:              Bas van Dijk
maintainer:          v.dijk.bas@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable haxl-test
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, haxl, hashable, exceptions
  default-language:    Haskell2010
